<resources>
    <string name="app_name">Mappedin Wayfinding Sample</string>
    <string name="welcome">Welcome to the Mappedin Sample App!</string>
    <string name="loading">Loading your maps…</string>
    <string name="search_hint">Search…</string>
    <string name="clear_search">Clear search</string>
    <string name="directions">Directions</string>
    <string name="start_navigation">Go</string>
    <string name="close_location_description">Close location information</string>
    <string name="close_route_details">Close Route Details</string>
    <string name="your_location_name">your location</string>
    <string name="next_instruction">Next Step</string>
    <string name="previous_instruction">Previous Step</string>
    <string name="heading_icon">Heading</string>
    <string name="more_settings">More Settings</string>
    <string name="accessibility_dialog_title">Accessibility Mode</string>
    <string name="accessibility_dialog_message">Enabling accessibility mode will direct you only to elevators to change floors. Would you like to enable this mode?</string>
    <string name="accessibility_dialog_enable">Enable</string>
    <string name="accessibility_dialog_disable">Don\'t Enable</string>
    <string name="accessibility_toggle">Accessible Route</string>
    <string name="directions_failure_dialog_title">Can\'t Get Directions</string>
    <string name="not_at_venue_dialog_message">Looks like you are too far from the premises to get indoor directions</string>
    <string name="directions_failure_dialog_message">There was a problem finding directions from your location</string>
    <string name="ok_btn">OK</string>
    <string name="minutes_to_destination">%1$d min</string>
    <string name="distance_to_step">%1$dm</string>
    <string name="switch_location_dialog_title">New Location Selected</string>
    <string name="switch_location_dialog_message">Would you like to cancel wayfinding and view the new location?</string>
    <string name="arrive_at_destination_dialog_title">Arrived at %1$s</string>
    <string name="arrive_at_destination_dialog_message">You have reached your destination.</string>
    <string name="confirm_dialog">Yes</string>
    <string name="dismiss_dialog">No</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
