<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true">
    <LinearLayout
        android:id="@+id/steps_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorSelectedBg"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageButton
            android:id="@+id/previous_step_btn"
            android:contentDescription="@string/previous_instruction"
            android:tag="previous"
            app:srcCompat="@drawable/ic_arrow_left"
            android:background="@android:color/transparent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight = "0"
            android:onClick="previewInstruction"
            />
        <ImageView
            android:id="@+id/direction_icon"
            android:contentDescription="@string/heading_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:tint="@android:color/white" />
        <TextView
            android:id="@+id/distance_to_instruction"
            android:layout_height="wrap_content"
            android:layout_width = "wrap_content"
            android:layout_weight = "0"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/directions"
            android:textColor="@color/azure"
            android:textSize="20sp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/instruction_text"
            android:layout_height="wrap_content"
            android:layout_width = "fill_parent"
            android:layout_weight = "1"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/directions"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal" />
        <ImageButton
            android:id="@+id/next_step_btn"
            android:contentDescription="@string/next_instruction"
            android:tag="next"
            app:srcCompat="@drawable/ic_arrow_right"
            android:background="@android:color/transparent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight = "0"
            android:onClick="previewInstruction"
            />
        <ImageButton
            android:contentDescription="@string/more_settings"
            app:srcCompat="@drawable/ic_more"
            android:background="@android:color/transparent"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight = "0"
            android:onClick="showNavigationSettings"
            />
    </LinearLayout>
    <Switch
        android:id="@+id/accessible_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorUnselectedBg"
        android:visibility="gone"
        android:padding="15dp"
        android:layout_below="@id/steps_bar"
        android:text="@string/accessibility_toggle"
        android:textColor="@android:color/white" />
    <View
        android:id="@+id/accessible_switch_shadow"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_above="@id/accessible_switch"
        android:background="@drawable/top_shadow"
        android:visibility="gone" />
</RelativeLayout>