<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/route_title_layout"
    android:orientation='horizontal'
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:gravity="center_vertical"
    android:maxHeight="350dp"
    android:background="@color/colorSelectedBg"
    tools:ignore="Overdraw"
    android:clickable="true"
    android:focusable="true">
    <RelativeLayout
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight = "1"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/to_location_text_view"
            android:textColor="#FFFFFFFF"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_width = "fill_parent"
            />
        <TextView
            android:id="@+id/time_to_destination_text_view"
            android:textColor="#FFFFFFFF"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:layout_below="@id/to_location_text_view"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_width = "fill_parent"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/start_navigation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/directions_btn"
        android:text="@string/start_navigation"
        android:gravity="center"
        android:textColor="#FFFFFFFF"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:layout_weight = "0"/>
    <ImageButton
        android:id="@+id/route_preview_close_btn"
        android:contentDescription="@string/close_route_details"
        app:srcCompat="@drawable/ic_close"
        android:background="@android:color/transparent"
        android:onClick="closeRouteDetails"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_weight = "0"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>