<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:maxHeight="350dp"
    android:background="@color/colorSelectedBg"
    tools:ignore="Overdraw"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/title_layout"
        android:orientation='horizontal'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        >
        <TextView
            android:id="@+id/location_name_text_view"
            android:textColor="#FFFFFFFF"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width = "fill_parent"
            android:layout_weight = "1"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            />
        <ImageButton
            android:id="@+id/location_close_btn"
            android:contentDescription="@string/close_location_description"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_close"
            android:onClick="closeLocationPage"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight = "0"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/directions_button"
        android:layout_below="@+id/title_layout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/directions_btn"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:paddingEnd="35dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingStart="35dp"
        >
        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_directions"
            android:background="@android:color/transparent"
            android:contentDescription="@string/directions"/>
        <TextView
            android:id="@+id/directions_button_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/directions"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>
</RelativeLayout>